# advent-of-code-2025

./: .gitignore  README.md
calling_bird/src/: paper_matrix.hpp
calling_birds/: CMakeLists.txt  prepare_input.sh
calling_birds/src/: main.cpp  paper_matrix.hpp
french_hen/: go.mod
french_hen/src/: main.go
french_hens/: go.mod  input.txt
french_hens/src/: joltage_pair.go  main.go
golden_ring/: app.ts  package-lock.json  package.json
goose_a_laying/: main.lua
lord_a_larping/: main.odin
partridge/: Cargo.toml
partridge/src/: dial_lock.rs  main.rs
swan_a_swimming/: main.odin
turtle_dove/src/: main.zig
turtle_doves/src/: main.zig
